--- a/RandomTaikoSongProgram/MainWindow.xaml
+++ b/RandomTaikoSongProgram/MainWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:local="clr-namespace:RandomTaikoSongProgram"
     mc:Ignorable="d"
-    Title="태고 랜덤 노래 추천프로그램 0.1ver" Height="700" Width="1100" MaxHeight="700" MaxWidth="1100" WindowStartupLocation="CenterScreen"
+    Title="태고 랜덤 노래 추천프로그램 0.1ver" Height="900" Width="1300" WindowStartupLocation="CenterScreen"
     FontFamily="NanumGothic" Loaded="MetroWindow_Loaded" >
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
@@ -52,10 +52,15 @@
 
         <DataGrid Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" x:Name="GrdResult" Margin="5,5,5,5" 
                   IsReadOnly="True" Style="{StaticResource MahApps.Styles.DataGrid.Azure}" 
-                  ItemsSource="{Binding}"  Grid.ColumnSpan="3" SelectionChanged="Title_Click">
+                  ItemsSource="{Binding RunCrawling}"  Grid.ColumnSpan="3" SelectionChanged="Title_Click">
             <DataGrid.Resources>
                 <!-- 헤더 스타일 정의 -->
                 <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                </Style>
+
+                <!-- 셀 스타일 정의 -->
+                <Style TargetType="DataGridCell">
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
                 </Style>
             </DataGrid.Resources>
@@ -183,7 +188,7 @@
             </Button>
         </Grid>
 
-        <StatusBar Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="-2,230,-2,-2" Grid.RowSpan="2">
+        <StatusBar Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="-2,250,-2,-2" Grid.RowSpan="3">
             <StatusBarItem Content="Taiko &amp; Random Song App" />
             <Separator Style="{StaticResource MahApps.Styles.Separator.StatusBar}" />
             <StatusBarItem x:Name="StsResult" />
