--- a/RandomTaikoSongProgram/MainWindow.xaml
+++ b/RandomTaikoSongProgram/MainWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:local="clr-namespace:RandomTaikoSongProgram"
     mc:Ignorable="d"
-    Title="태고 랜덤 노래 추천프로그램 0.1ver" Height="900" Width="1300" WindowStartupLocation="CenterScreen"
+    Title="태고 랜덤 노래 추천프로그램 0.1ver" Height="700" Width="1155" MaxHeight="700" MaxWidth="1155" WindowStartupLocation="CenterScreen"
     FontFamily="NanumGothic" Loaded="MetroWindow_Loaded" >
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
@@ -24,46 +24,87 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
-            <RowDefinition Height="111*"/>
-            <RowDefinition Height="55*"/>
+            <RowDefinition Height="100*"/>
+            <RowDefinition Height="45*"/>
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
 
-        <TextBox Grid.Row="0" Grid.ColumnSpan="2" x:Name="TxtYouTubeName" FontSize="14" Margin="5,10,5,10" 
-                     mah:TextBoxHelper.Watermark="검색어를 입력하세요." 
+        <TextBox Grid.Row="0" Grid.ColumnSpan="3" x:Name="TxtYouTubeName" FontSize="14" Margin="5,5,5,5" IsReadOnly="True"
+                     mah:TextBoxHelper.Watermark="현재 선택한 곡" 
                      mah:TextBoxHelper.UseFloatingWatermark="True" 
-                     mah:TextBoxHelper.ClearTextButton="True" 
                      InputMethod.PreferredImeState="On" 
-                     InputMethod.PreferredImeConversionMode="Native" 
-                     KeyDown="TxtYouTubeName_KeyDown" />
+                     InputMethod.PreferredImeConversionMode="Native" />
 
-        <Button Grid.Row="0" Grid.Column="2" x:Name="BtnSearchYouTube" FontSize="14" Margin="5,10,5,10" 
-                    Content="검색" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Click="BtnSearchYouTube_Click">
-            <Button.ContentTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <iconPacks:PackIconModern Kind="Magnify" Margin="1,5"/>
-                        <TextBlock Text="{Binding}" Margin="5" />
-                    </StackPanel>
-                </DataTemplate>
-            </Button.ContentTemplate>
-        </Button>
-
-
-        <DataGrid Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" x:Name="GrdResult" Margin="5,5,5,5" 
-                  IsReadOnly="True" Style="{StaticResource MahApps.Styles.DataGrid.Azure}" 
-                  ItemsSource="{Binding}"  Grid.ColumnSpan="3" SelectionChanged="Title_Click">
+        <DataGrid Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" x:Name="GrdResult" Margin="5,5,5,5" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                  IsReadOnly="True" Style="{StaticResource MahApps.Styles.DataGrid.Azure}"
+                  Grid.ColumnSpan="3" SelectionChanged="Title_Click">
+            <!-- 헤더 스타일 정의 -->
             <DataGrid.Resources>
-                <!-- 헤더 스타일 정의 -->
                 <Style TargetType="DataGridColumnHeader">
-                    <Setter Property="HorizontalContentAlignment" Value="Center" />
-                </Style>
-
-                <!-- 셀 스타일 정의 -->
-                <Style TargetType="DataGridCell">
-                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                    <Setter Property="HorizontalContentAlignment"  Value="Center"/>
+                    <Setter Property="VerticalContentAlignment"  Value="Center"/>
                 </Style>
             </DataGrid.Resources>
+            
+            <!-- 셀 스타일 정의 -->
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="타이틀" Binding="{Binding Title}" CanUserResize="False" CanUserReorder="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="작곡가" Binding="{Binding Composer}" CanUserResize="False" CanUserReorder="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="쉬움" Binding="{Binding Easy}" CanUserResize="False" CanUserReorder="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="보통" Binding="{Binding Normal}" CanUserResize="False" CanUserReorder="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="어려움" Binding="{Binding Hard}" CanUserResize="False" CanUserReorder="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="오니" Binding="{Binding Oni}" CanUserResize="False" CanUserReorder="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="우라" Binding="{Binding Ura}" CanUserResize="False" CanUserReorder="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="장르" Binding="{Binding Genre}" CanUserResize="False" CanUserReorder="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+            </DataGrid.Columns>
         </DataGrid>
 
         <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" Grid.RowSpan="3">
