--- a/RandomTaikoSongProgram/TrailerWindow.xaml
+++ b/RandomTaikoSongProgram/TrailerWindow.xaml
@@ -9,7 +9,7 @@
     xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
     xmlns:local="clr-namespace:RandomTaikoSongProgram"
     mc:Ignorable="d"
-    Title="유튜브 예고편" Height="350" Width="800" FontFamily="NanumGothic" 
+    Title="유튜브 예고편" Height="960" Width="1024" FontFamily="NanumGothic" 
     Loaded="MetroWindow_Loaded" Closing="MetroWindow_Closing">
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
@@ -26,10 +26,10 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" x:Name="LblSearchName" FontSize="14" Margin="10"
+        <Label Grid.Row="0" Grid.Column="0" x:Name="LblSearchName" FontSize="14" Margin="10,10,10,10"
                Content="노래제목" />
-        
-        <ListView Grid.Row="1" Grid.Column="0" x:Name="LsvResult" Margin="5" MouseDoubleClick="LsvResult_MouseDoubleClick">
+
+        <ListView Grid.Row="1" Grid.Column="0" x:Name="LsvResult" Margin="5,5,5,5" MouseDoubleClick="LsvResult_MouseDoubleClick">
             <ListView.View>
                 <GridView>
                     <!-- 컬럼들을 나열 -->
@@ -49,9 +49,9 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        
+
         <!-- 웹브라우저 영역 -->
-        <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="10" Background="Gainsboro">
+        <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="10" Background="Gainsboro" Grid.ColumnSpan="2">
             <!-- <WebBrowser/> 문제가 너무 많음 사용 불가 -->
             <cefSharp:ChromiumWebBrowser x:Name="BrsYoutube" Address="https://youtube.com" />
         </Grid>
